# aeron-rs

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/scripts/: check-bench-regression.sh
.github/workflows/: bench-regression.yml  rust.yml
benches/: clock.rs  cqe_dispatch.rs  duty_cycle.rs  e2e_latency.rs  e2e_throughput.rs  frame_parse.rs  io_uring_submit.rs  loss_recovery.rs  poll_fragments.rs  publication_offer.rs  retransmit.rs  slot_pool.rs
docs/: ARCHITECTURE.md  configuration_tuning.md  performance_design.md
docs/decisions/: ADR-001-four-term-partitions.md  ADR-002-subscriber-gap-skip-loss-recovery.md
docs/sessions/: 2026-04-06-cross-thread-offer-plan.md  2026-04-06-network-publication-plan.md  2026-04-06-retransmit-handler-plan.md  2026-04-06-sender-refactor-plan.md  2026-04-06-term-buffer-write-path-plan.md  2026-04-09-phase3-receiver-planning.md  2026-04-10-e2e-bench-interaction-analysis.md  2026-04-10-e2e-bench-test-refactor-plan.md  2026-04-10-subscription-poll-plan.md  2026-04-11-benchmark-suite-plan.md  2026-04-11-controlled-poll-plan.md  2026-04-13-throughput-improvement-plan.md
docs/templates/: decision_template.md
examples/: diag_ping.rs  frame_roundtrip.rs  ping_pong.rs  recv_data.rs  send_heartbeat.rs  throughput.rs
src/: clock.rs  context.rs  frame.rs  lib.rs
src/agent/: conductor.rs  (+5 more)
tests/: adaptive_sm.rs  agent_duty_cycle.rs  client_library.rs  concurrent_offer.rs  e2e_send_recv.rs  flow_control_e2e.rs  loss_recovery_e2e.rs  protocol_handshake.rs  rtt_completion.rs  rtt_diag.rs  uring_loopback.rs
(+25 files in other folders)
